--- a/app/src/main/res/values-fr/help.xml
+++ b/app/src/main/res/values-fr/help.xml
@@ -164,17 +164,17 @@
     <string name="help_send"><![CDATA[
         <h1>Envoyer</h1>
         <h2>Adresse de Destinataire</h2>
-        <p>C’est l’adresse publique du portefeuille auquel vous allez envoyer des Moneroj, vous pouvez
+        <p>C\’est l\’adresse publique du portefeuille auquel vous allez envoyer des Moneroj, vous pouvez
         la copier/coller, scanner un QR code ou la saisir manuellement. Vérifiez là bien trois fois
-        afin de vous assurer que vous n’envoyez pas de pièces à la mauvaise adresse.</p>
-        <p>En complément de l’utilisation d’une adresse XMR, vous pouvez aussi utiliser
-        <ul>
-            <li>une adresse OpenAlias pour XMR ou BTC</li>
-            <li>une adresse BTC</li>
-        </u>
-        	</p>
+        afin de vous assurer que vous n\’envoyez pas de pièces à la mauvaise adresse.</p>
+        <p>En complément de l\’utilisation d\’une adresse XMR, vous pouvez aussi utiliser
+            <ul>
+                <li>une adresse OpenAlias pour XMR ou BTC</li>
+                <li>une adresse BTC</li>
+            </u>
+        </p>
         <h2>Conversion des XMR</h2>
-        <p>La conversion vers une autre cryptomonnaie est traitée par un service d\'échange externe. Monerujo ne fait pas fonctionner ni n'est associé avec ces tierces parties et ne peut donc pas vous aider au sujet de ces services, mais vous fournira les informations nécessaires pour obtenir une prise en charge de leur part.</p>
+        <p>La conversion vers une autre cryptomonnaie est traitée par un service d\'échange externe. Monerujo ne fait pas fonctionner ni n\'est associé avec ces tierces parties et ne peut donc pas vous aider au sujet de ces services, mais vous fournira les informations nécessaires pour obtenir une prise en charge de leur part.</p>
 		<p>Ajoutez simplement une adresse correspondante ou choisissez la monnaie désirée en touchant son icône.</p>
     ]]></string>
 
