--- a/app/src/main/res/values-sv/about.xml
+++ b/app/src/main/res/values-sv/about.xml
@@ -15,47 +15,46 @@
 
     <string name="privacy_policy"><![CDATA[
         <h1>Sekretesspolicy</h1>
-        <p>Den här sidan informerar dig om våra villkor angående samlingen
-        och användningen av personlig information vi hämtar från användare
+        <p>Den här sidan informerar dig om våra villkor angående insamling,
+        användning och utlämnande av personlig information vi hämtar från användare
         av vår app (monerujo: Monero Plånbok).
         </p>
-        <p>Genom att använda denna app, går du med på samling och användning av information
+        <p>Genom att använda denna app, går du med på insamling och användning av information
         enligt denna policy.
         </p>
-        <h2>Samlad Data</h2>
+        <h2>Insamlade data</h2>
         <p>Personlig data är all slags data som kan identifiera en individ.
         </p>
-        <p>Moneronycklar och offentliga adresser är samlade och bearbetade av appen lokalt
-        för att utföra transaktioner och skicka till Monero-nätverket i krypterad form.
+        <p>Moneronycklar och publika adresser samlas in och behandlas av appen lokalt
+        för att behandla transaktioner och skicka dem till Monero-nätverket i krypterad form.
         </p>
-        <p>Någon annan personlig data är inte samlad av appen.</p>
-        <p>Om du använder funktionen för USD/EUR växling (valfritt) så hämtar monerujo valutakurserna
-        genom offentliga API:n av kraken.com.
+        <p>Någon annan personlig data insamlas inte av appen.</p>
+        <p>Om du använder växlingsfunktionen (valfri) hämtar monerujo valutakurser
+        genom ett publikt API hos coinmarketcap.com.
         Läs deras sekretesspolicy på https://www.kraken.com/legal/privacy för
-        detaljer om hur data i dina begär är samlade (speciellt
-        sektionen "Information We Collect Automatically").</p>
-        <p>Om du använder appen för att skicka pengar till BTC-adresser, behöver du använda tjänsten Exolix.
-        Läs deras sekretesspolicy för detaljer på https://exolix.com/privacy. Monerujo skickar de BTC-
-        destination adressen och mängden. Din IP kan även samlas.</p>
+        mer information om hur data i dina förfrågningar samlas in.</p>
+        <p>Om du använder appen för att betala till BTC-adresser, kommer du att använda tjänsten SideShift.ai.
+        Läs deras sekretesspolicy på https://exolix.com/privacy för mer information. Monerujo skickar de BTC-
+        destinationsadressen och beloppet. Din IP-adress kan också komma att samlas in.</p>
         <h2>App-behörigheter</h2>
         <ul>
-        <li>INTERNET : Anslut till Monero-nätverket via en Monero Daemon nod</li>
-        <li>READ_EXTERNAL_STORAGE : Läs plånboksfiler lagrade på enheten</li>
-        <li>WRITE_EXTERNAL_STORAGE : Skriv till plånboksfiler lagrade på enheten</li>
-        <li>WAKE_LOCK : Behåll enheten vaken under synkronisering</li>
+        <li>INTERNET : Ansluta till Monero-nätverket via en Monero Daemon-nod</li>
+        <li>READ_EXTERNAL_STORAGE : Läsa plånboksfiler lagrade på enheten</li>
+        <li>WRITE_EXTERNAL_STORAGE : Skriva till plånboksfiler lagrade på enheten</li>
+        <li>WAKE_LOCK : Hålla enheten vaken under synkronisering</li>
         <li>CAMERA : Skanna QR-koder för att ta emot Monero</li>
         </ul>
         <h2>Ändringar till denna Sekretesspolicy</h2>
-        <p>Vi kan uppdatera denna sekretesspolicy. Vi meddelar
-        dig om alla ändringar genom att skriva om den nya sekretesspolicyn i appen
+        <p>Vi kan komma att uppdatera denna sekretesspolicy då och då. Vi meddelar
+        dig om eventuella ändringar genom att lägga upp den nya sekretesspolicyn i appen
         och på hemsidan (www.monerujo.io)
-        Vi rekommendar att du läser vår sekretesspolicyn regelbundet för eventuella ändringar.
-        <p>Denna Sekretesspolicy uppdaterades senast den: 10 November, 2017.
+        Vi rekommendar att du läser vår sekretesspolicy regelbundet för eventuella ändringar.
+        <p>Denna sekretesspolicy uppdaterades senast den: 10 November, 2017.
         </p>
-        <h2>Kontakta Oss</h2>
-        <p>Om du har några frågor om våran sekretesspolicy,
-        eller om hur din data blir samlad och bearbetad,
-        vänligen skicka e-post till privacy@monerujo.io.
+        <h2>Kontakta oss</h2>
+        <p>Om du har några frågor om vår sekretesspolicy,
+        eller om hur dina data samlas in och behandlas,
+        skicka ett e-postmeddelande till privacy@monerujo.io.
         </p>
         ]]></string>
 </resources>
