--- a/app/src/main/res/values-ar/help.xml
+++ b/app/src/main/res/values-ar/help.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<resources tools:locale="ar" xmlns:tools="http://schemas.android.com/tools">
-  <string name="help_create_new"><![CDATA[
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="ar">
+    <string name="help_create_new"><![CDATA[
 <h1> إنشاء محفظة - جديده </h1>
  <p> إذا كنت بحاجة إلى عنوان مونيرو جديد! </p>
  <p> أدخل اسم المحفظة وكلمة المرور.
@@ -19,7 +19,7 @@
  أن تقوم بعمل نسخة احتياطية من بذرة ذاكرتك عن طريق كتابتها وتخزينها في <em> عدة </em> آمنة
  والأماكن الآمنة. </p>
 ]]></string>
-  <string name="help_create_seed"><![CDATA[
+    <string name="help_create_seed"><![CDATA[
 <h1> إنشاء محفظة - بذرة </h1>
  <p> إذا كان لديك بالفعل عنوان مونيرو وتريد استرداد المعاملات من blockchain! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
@@ -29,7 +29,7 @@
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
 ]]></string>
-  <string name="help_create_ledger"><![CDATA[
+    <string name="help_create_ledger"><![CDATA[
 <h1> إنشاء المحفظة - لدجر (ledger) </h1>
  <p> اذا تريد استرداد محفظتك من جهاز Ledger Nano S الخاص بك. </p>
  <p> مفاتيحك السرية لا تترك جهاز Ledger أبدًا، لذا تحتاج إلى توصيلة في كل مرة تريد الوصول إلى محفظتك. </p>
@@ -39,7 +39,7 @@
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
 ]]></string>
-  <string name="help_create_keys"><![CDATA[
+    <string name="help_create_keys"><![CDATA[
 <h1> إنشاء محفظة - المفاتيح </h1>
  <p> إذا كنت تستعيد محفظتك باستخدام مفاتيحك! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
@@ -49,7 +49,7 @@
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
 ]]></string>
-  <string name="help_create_view"><![CDATA[
+    <string name="help_create_view"><![CDATA[
 <h1> إنشاء محفظة - عرض </h1>
  <p> إذا كنت تريد فقط مراقبة المعاملات الواردة إلى المحفظة! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
@@ -59,7 +59,7 @@
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
 </em>]]></string>
-  <string name="help_details"><![CDATA[
+    <string name="help_details"><![CDATA[
 <h1> تفاصيل المحفظة </h1>
  <h2> عنوان المحفظة العام </h2>
  يمكنك التعامل مع عنوانك العام كما تتعامل مع رقم حسابك البنكي، يمكنك مشاركته مع الآخرين دون الخوف من فقدان مونيرو الخاص بك. يمكن للأشخاص بإرسال مونيرو إلى محفظتك باستخدام هذا العنوان.
@@ -81,7 +81,7 @@
  <h2> مفتاح الإنفاق </h2>
  مفتاح الإنفاق الخاص بك يتيح لأي شخص إنفاق مونيرو المرتبطة بمحفظتك، لذا لا تشارك هذا المفتاح مع أي شخص، واحتفظ به في مكان آمن مثل بذرة الذاكرة الخاصة بك.
 ]]></string>
-  <string name="help_list"><![CDATA[
+    <string name="help_list"><![CDATA[
 <h1> قائمة المحافظ </h1>
  <h2> العقدة </h2>
  <p> مونيروجو يتواصل مع شبكة مونيرو عبر عقدة بعيدة، مما يغني عن الحاجة لتنزيل وتخزين نسخة كاملة من البلوكتشين. يمكنك العثور على قائمة بالعقد البعيدة الشائعة أو معرفة كيفية تشغيل عقدتك البعيدة الخاصة هنا https://moneroworld.com/ <p>
@@ -100,7 +100,7 @@
  <h3> الأرشيف </h3>
  <p> إنشاء نسخة احتياطية وحذف المحفظة بعد ذلك. النسخة تبقى في مجلد <tt> النسخ الاحتياطية </tt>. إذا لم تعد بحاجة إلى النسخ الاحتياطية، يجب عليك حذفها باستخدام تطبيق لاستكشاف الملفات أو تطبيق حذف أمن. </p>
 ]]></string>
-  <string name="help_tx_details"><![CDATA[
+    <string name="help_tx_details"><![CDATA[
 <h1> تفاصيل العملية </h1>
  <h2> الوجهة </h2>
  العنوان العام للمحفظة التي سيتم إرسال مونيرو إليها
@@ -113,7 +113,7 @@
  <h2> الكتلة </h2>
  هذه هي الكتلة التي تم تضمين العملية فيها.
 ]]></string>
-  <string name="help_send"><![CDATA[
+    <string name="help_send"><![CDATA[
 <h1> أرسل </h1>
  <h2> عنوان المستلم </h2>
  <p> عنوان العام للمحفظة التي ترسل إليها، يمكنك لصقه من
@@ -139,14 +139,14 @@
  </ul>
  ما عليك سوى إضافة عنوان مطابق أو تحديد العملة المطلوبة عن طريق اختيار الرمز الخاص بها. </p>
 ]]></string>
-  <string name="help_xmrto"><![CDATA[
+    <string name="help_xmrto"><![CDATA[
 <h1> تحويل XMR </h1>
  <h2> المبالغ <h2>
  <p> قم بإدخال القيمة التي ترغب في إرسالها من العملة المشفرة في حقل \"المبلغ\". سيظهر لك بشكل افتراضي القيمة المكافئة من XMR التي سترسل من محفظتك. يمكنك اختيار عملة أخرى من القائمة المنسدلة إذا كنت ترغب في تحديد القيمة بتلك العملة. يستخدم مونيروجو سعرًا ثابتًا، لذا يجب أن تحصل على القيمة الدقيقة التي حددتها هنا في نهاية العملية. </p>
  <h2> سعر التبادل </h2>
  <p> سترى أدناه السعر الحالي الذي يقدمه السوق، بالإضافة إلى الحد الأدنى والأقصى له. يرجى ملاحظة أن هذا السعر ليس مضمونًا في هذه المرحلة، وسيتم تحديده عندما تكون معاملتك جاهزة للموافقة في الشاشة التالية. </p>
 ]]></string>
-  <string name="help_wallet"><![CDATA[
+    <string name="help_wallet"><![CDATA[
 <h1> المحفظة </h1>
  <h2> وضع الشارع </h2>
  <p> يمكن تفعيل/تعطيل وضع الشارع من القائمة أو من خلال أيقونة رأس Gunther. في هذا الوضع، لن يظهر رصيدك
@@ -167,7 +167,7 @@
  <h2> قائمة المعاملات </h2>
  <p> قائمة بمعاملات المحفظة. في قائمة المحافظ، يتم عرض المعاملات الواردة فقط. </p>
 ]]></string>
-  <string name="help_node"><![CDATA[
+    <string name="help_node"><![CDATA[
 <h1> العقد </h1>
  <h2>طويل اوي مش هقرأ  </h2>
  <p> قم بتحديث قائمة العقد عن طريق سحب للأسفل و سجل إشارة مرجعية 3-5 عقد للسماح مونيروجو
@@ -213,7 +213,7 @@
  سوف ينتقل مونيروجو مباشرة إلى عقده مونيرو الأولية المشفرة في مونيرو.
  يتوقف الفحص عندما يجد إجمالي 10 عقد. </p>
 ]]></string>
-  <string name="help_uri"><![CDATA[
+    <string name="help_uri"><![CDATA[
 <h1> كيفية استخدام رابط الدفع </h1>
  <p> لقد قمت بتشغيل رابط الدفع باستخدام مونيروجو. لإجراء عملية الإرسال، يرجى اتباع الخطوات التالية: </p>
  <p>
@@ -223,10 +223,10 @@
  </p>
  <p> ستتم ملء تفاصيل الدفع تلقائياً. تأكد من صحتها ثم اتبع الإجراءات المعتادة لإجراء أي معاملة. </p>
 ]]></string>
-  <string name="help_ok">حسنا!</string>
-  <string name="help_nok">ممم... لا</string>
-  <string name="help_getorbot">احصل على Orbot!</string>
-  <string name="help_tor"><![CDATA[
+    <string name="help_ok">حسنا!</string>
+    <string name="help_nok">ممم... لا</string>
+    <string name="help_getorbot">احصل على Orbot!</string>
+    <string name="help_tor"><![CDATA[
 <h1> تور </h1>
  <p> تور، المعروف أيضاً بـ The Onion Router، هو برنامج مجاني ومفتوح المصدر يتيح التواصل المجهول. </p>
  <p> عند تفعيل تور، سيتم توجيه اتصالك عبر عدة مراحل وسيتم إخفاء عنوان IP الخاص بك
@@ -237,7 +237,7 @@
  <p> إذا واجهت مشكلات في الاتصال بـ تور، جرب الحصول على هوية جديدة في تطبيق Orbot (الأيقونة
  في الجزء العلوي الأيمن). </p>
 ]]></string>
-  <string name="help_tor_enable"><![CDATA[
+    <string name="help_tor_enable"><![CDATA[
 <h1> عقدة تور </h1>
  <p> هذه عقدة من نوع .onion. لكي تستخدمها، يجب عليك تفعيل وضع تور بالضغط على
  الأيقونة <img src=\"ic_network_clearnet\"/> الموجودة بالقرب من أعلى صفحة قائمة المحافظ. </p>
