--- a/app/src/main/res/values-ta/help.xml
+++ b/app/src/main/res/values-ta/help.xml
@@ -20,7 +20,6 @@
         விதையைக் கொண்டு). எனவே, உங்கள் நினைவி விதையை ஒன்றிற்கும் மேற்பட்ட <em>பாதுகாப்பான</em> இடங்களில் 
         கைப்பட எழுதி வைப்பது இன்றியமையாததாகும்.</p>
     ]]></string>
-
     <string name="help_create_seed"><![CDATA[
         <h1>பணப்பை உருவாக்கல் - விதை</h1>
         <p>உங்களிடம் ஏற்கனவே ஒரு மொனேரொ முகவரி இருந்து, தொகுப்பு சங்கிலியில் இருந்து பரிமாற்றங்களை மீட்டெடுக்க வேண்டுமென்றால்!</p>
@@ -32,7 +31,6 @@
         மேலும் நீங்கள் வவவவ-மம-நாநா என்னும் வடிவத்தில் ஒரு தேதியையும் பயன்படுத்தலாம். உங்களுக்கு குழப்பமாக இருந்தால, 
         இந்த பணப்பை முகவரிக்கு <em>முன்பு</em> நீங்கள் முதலில் பயன்படுத்திய தோராயமான தேதி அல்லது தொகுதி உயரத்தை உள்ளிடவும்.</p>
     ]]></string>
-
     <string name="help_create_ledger"><![CDATA[
         <h1>பணப்பையை உருவாக்கல் - பேரேடு</h1>
         <p>உங்கள் பேரேடு நாநோ S சாதனத்திலிருந்து உங்கள் பணப்பையை மீட்டெடுக்க வேண்டுமென்றால்.</p>
@@ -45,7 +43,6 @@
         மேலும் நீங்கள் வவவவ-மம-நாநா என்னும் வடிவத்தில் ஒரு தேதியையும் பயன்படுத்தலாம். உங்களுக்கு குழப்பமாக இருந்தால, 
         இந்த பணப்பை முகவரிக்கு <em>முன்பு</em> நீங்கள் முதலில் பயன்படுத்திய தோராயமான தேதி அல்லது தொகுதி உயரத்தை உள்ளிடவும்.</p>
     ]]></string>
-
     <string name="help_create_keys"><![CDATA[
         <h1>பணப்பையை உருவாக்கல் - திறவுகோல்கள்</h1>
         <p>உங்கள் திறவுகோல்களை பயன்படுத்தி உங்கள் பணப்பையை மீட்டெடுக்க உள்ளீர்கள் என்றால்!</p>
@@ -57,7 +54,6 @@
         மேலும் நீங்கள் வவவவ-மம-நாநா என்னும் வடிவத்தில் ஒரு தேதியையும் பயன்படுத்தலாம். உங்களுக்கு குழப்பமாக இருந்தால, 
         இந்த பணப்பை முகவரிக்கு <em>முன்பு</em> நீங்கள் முதலில் பயன்படுத்திய தோராயமான தேதி அல்லது தொகுதி உயரத்தை உள்ளிடவும்.</p>
     ]]></string>
-
     <string name="help_create_view"><![CDATA[
         <h1>பணப்பையை உருவாக்கல் - பார்க்க</h1>
         <p>பணப்பைக்கான உள்வரு பரிமாற்றங்களை மட்டும் நீங்கள் கண்காணிக்க வேண்டுமென்றால்!</p>
@@ -69,8 +65,6 @@
         மேலும் நீங்கள் வவவவ-மம-நாநா என்னும் வடிவத்தில் ஒரு தேதியையும் பயன்படுத்தலாம். உங்களுக்கு குழப்பமாக இருந்தால, 
         இந்த பணப்பை முகவரிக்கு <em>முன்பு</em> நீங்கள் முதலில் பயன்படுத்திய தோராயமான தேதி அல்லது தொகுதி உயரத்தை உள்ளிடவும்.</p>
     ]]></string>
-
-
     <string name="help_tx_details"><![CDATA[
         <h1>பரிமாற்ற விவரங்கள்</h1>
         <h2>சேருமிடம்</h2>
@@ -88,7 +82,6 @@
         <h2>தொகுப்பு</h2>
         இது உங்கள் பரிமாற்றம் சேர்க்கப்பட்டுள்ள தொகுப்பாகும்.
     ]]></string>
-
     <string name="help_uri"><![CDATA[
         <h1>பணம் செலுத்தல் தொடுப்பியை பயன்படுத்துதல்</h1>
         <p>ஒரு செலுத்தல் தொடுப்பியை கொண்டு நீங்கள் monerujo வை துவக்கி விட்டீர்கள். வைப்புகளை அனுப்ப, பின்வரும் செயல்களை செய்யவும்:</p>
@@ -99,10 +92,11 @@
         </p>
         <p>பணம் செலுத்தல் விவரங்கள் நிரப்பப்பட்டிருக்கும். அவற்றைச் சரிபார்த்த பின் மற்ற பரிமாற்றங்களைப் போலப் பணம் செலுத்தத் தொடரவும்.</p>
     ]]></string>
+    <string name="help_ok">புரிந்தது!</string>
+    <!-- Note: "Got it" as in "I understand this" -->
 
-    <string name="help_ok">புரிந்தது!</string> <!-- Note: "Got it" as in "I understand this" -->
-
-    <string name="help_nok">தேவையில்லை…</string> <!-- Note: "Nah..." as in "I don't want this" -->
+    <string name="help_nok">தேவையில்லை…</string>
+    <!-- Note: "Nah..." as in "I don't want this" -->
     <string name="help_getorbot">ஆர்பாட் ஐ பெறு!</string>
     <string name="help_tor"><![CDATA[
         <h1>TOR</h1>
@@ -116,10 +110,30 @@
         <p>TOR உடன் இணைப்பதில் சிக்கல் ஏற்பட்டால், ஆர்பாட் செயலியில் ஒரு புதிய அடையாளத்தை பெற முயற்சிக்கவும்.
         (சின்னம் மேல் வலப்பக்கத்தில் உள்ளது).</p>
     ]]></string>
-
     <string name="help_tor_enable"><![CDATA[
         <h1>TOR கணு</h1>
         <p>இது ஒரு .onion கணுவாகும். இதை பயன்படுத்த நீங்கள் பணப்பை பட்டியல் பக்கத்தின் மேல் உள்ள <img src="ic_network_clearnet"/>
         சின்னத்தை தட்டி TOR பயன்முறையை செயல்படுத்தவும்.</p>
     ]]></string>
+    <string name="help_sidekick"><![CDATA[
+ <h2> உங்கள் பக்கவாட்டு பணப்பையை பயன்படுத்துதல் </h2>
+ இரண்டு தொலைபேசிகளும் ஊடலை வழியாக இணைக்கப்பட்டுள்ளதா மற்றும் இரண்டு பயன்பாடுகளும் திறக்கப்படுகின்றன என்பதை சரிபார்க்கவும்.
+
+ <h3> பக்கவாட்டில்: </h3>
+ உங்கள் விருப்பத்தின் பணப்பையை திறக்கவும்.
+
+ <h3> மோனெருசோவில்: </h3>
+ பக்கவாட்டுடன் இணைக்கவும்.
+
+ சைட்கிக் தொலைபேசியில் நீங்கள் திறந்ததைப் பொருத்தும் பணப்பையை திறக்கவும்.
+
+ நீங்கள் பொதுவாக எந்த பணப்பையையும் பயன்படுத்துவதால் இதைப் பயன்படுத்தவும். உள்வரும் பரிவர்த்தனைகளைக் காணவும், முகவரிகளைப் பகிரவும் அல்லது மோனெரோசை அனுப்பவும் ச்கேன் செய்யட்டும். பயன்பாடு உங்கள் சாவியை உள்ளடக்கிய ஒன்றைச் செய்ய வேண்டியிருந்தால், அது பக்கவாட்டிலிருந்து இசைவு கேட்பது.
+
+ <h3> பக்கவாட்டில்: </h3>
+ மோனெருசோ இசைவு கோரியால், பரிவர்த்தனை விவரங்கள் தொகை மற்றும் கட்டணம் போன்ற ஒரு உரையாடலை நீங்கள் காண வேண்டும். அதை ஏற்றுக்கொள்ள அல்லது மறுக்க, நீங்கள் இரண்டு விருப்பங்களையும் பார்ப்பீர்கள். புத்திசாலித்தனமாக தேர்வு செய்யவும்.
+
+ <h3> மோனெருசோவில்: </h3>
+ பரிவர்த்தனை கையெழுத்திட்டு அனுப்ப தயாராக இருக்க வேண்டும். அவ்வாறு செய்ய அழுத்தவும்.
+ <br/>
+ ]]></string>
 </resources>
